# cicada-studio

./: .gitignore  CORE_COMPATIBILITY.md  DEN.txt  Dockerfile  README.md  bb.ccd  bootstrap.sh  config.js  docker-compose.yml  env.example  m.ccd  par.txt  readmi.txt  secret.py  server.mjs
cic-st-core/: LICENSE
cicada/: executor.py
cicada-studio-core/: .gitignore  README.md  pyproject.toml
cicada-studio-core/cicada/: core.py  executor.py  parser.py
cicada-studio-core/cicada/adapters/: telegram.py.bak-20260513160213
cicada-studio-core/examples/: categories_products_db.ccd  echo.ccd  primer.ccd  support.ccd
cicada-studio-core/examples/cicada_modules/catalog/: index.ccd
cicada-studio-core/tests/: test_cli_check.py  test_executor_db_key.py  test_text_formatting_modes.py  test_url_encode_builtin.py
cicada-studio-core/tools/: send_photo_test.py
core/: App.jsx  blockRegistry.js  dslCodegen.js  dslCondition.js  executor_fixed.py
docs/: cicada-tg-migration-plan.md  compatibility-report.md  dependency-graph.md  dsl-feature-matrix.md  runtime-graph.md
examples/: catalog-state-machine.ccd
legacy/: README.md  callback_parser_legacy.py
scripts/: callback-parser-check.py  core-guard.mjs  fix-module-library-buttons.mjs  normalize-module-library.mjs  parser-batch-check.mjs
server/: admin.html
services/: cicadaPreviewWorker.mjs  dslRunner.mjs  pythonDslLint.mjs
src/: App.jsx  CicadaNode.jsx  DSLPanel.jsx  ModuleLibrary.jsx  PropsPanel.jsx  builderI18n.js  ccdParser.js  index.css  instructionsWizardI18n.js  main.jsx  moduleLibraryBuiltinLabels.js
(+32 files in other folders)
