[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cicada-studio"
version = "0.0.1"
description = "Русский DSL для Telegram ботов"
authors = [{name = "Cicada Team"}]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = ["requests"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Communications :: Chat",
]

[project.urls]
Homepage = "https://github.com/cicada-team/cicada-studio"
Repository = "https://github.com/cicada-team/cicada-studio"

[project.scripts]
cicada = "cicada.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["cicada*"]
